# wgpu-examples

./: Cargo.toml  LICENSE  README.md
src/: app.rs  lib.rs  main.rs  model.rs  shader.wgsl  state.rs  vertex.rs
